--- a/transcrible.ipynb
+++ b/transcrible.ipynb
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d1495e65",
    "metadata": {},
    "outputs": [
@@ -2182,7 +2182,7 @@
     "from datetime import datetime\n",
     "\n",
     "def setup_paths():\n",
-    "    base_dir = r'C:\\Users\\yingx\\OneDrive\\Documents\\GitHub\\Capstone\\data'\n",
+    "    base_dir = r'C:\\Users\\yingx\\data'\n",
     "    wav_dir = os.path.join(base_dir, 'WaveFiles')\n",
     "    output_file = os.path.join(base_dir, 'transcriptions.csv')\n",
     "    \n",
