--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ed042e0d",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,8 @@
     "import numpy as np\n",
     "import os\n",
     "import pandas as pd\n",
-    "import concurrent.futures"
+    "import concurrent.futures\n",
+    "import soundfile as sf"
    ]
   },
   {
